# CELLama

./: .pre-commit-config.yaml  CHANGELOG.md  MIGRATION.md  README.md  cellama.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  index.md
examples/: 01_quickstart.py  02_training.py
src/cellama/: __init__.py  api.py  cli.py
src/cellama/config/: loader.py  types.py
src/cellama/data/: io.py  schema.py
src/cellama/encoding/: base.py  st_encoder.py
src/cellama/metrics/: clustering.py
src/cellama/pipeline/: embed.py  evaluate.py  train.py
src/cellama/text/: builder.py
src/cellama/utils/: cache.py  logging.py  parallel.py
src/cellama/viz/: plots.py
tests/: conftest.py  test_api.py  test_encoder.py  test_pipeline.py  test_text_builder.py
